--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <br><br>
     <form id="titlesForm" action="">
-        <label>Choose a Studio Ghibli film:</label><br>
+        <label><h2>Choose a Studio Ghibli film:</h2></label><br>
         <select>
             <option></option>
         </select> 
